# rustyclinic

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  TODOS.md  architecture.md
.github/workflows/: ci.yml  dco.yml
crates/rustyclinic/: Cargo.toml
crates/rustyclinic-api/: Cargo.toml
crates/rustyclinic-api/src/: lib.rs  state.rs
crates/rustyclinic-api/src/middleware/: session.rs
crates/rustyclinic-api/src/routes/: auth.rs  mod.rs  patients.rs  queue.rs
crates/rustyclinic-auth/: Cargo.toml
crates/rustyclinic-auth/src/: credentials.rs  lib.rs  session.rs  users.rs
crates/rustyclinic-billing/: Cargo.toml
crates/rustyclinic-billing/src/: claims.rs  coverage.rs  lib.rs  payment.rs  tariff.rs
crates/rustyclinic-clinical/: Cargo.toml
crates/rustyclinic-clinical/src/: admission.rs  lab.rs  lib.rs  pharmacy.rs  program.rs  queue.rs  referral.rs
crates/rustyclinic-core/: Cargo.toml
crates/rustyclinic-core/src/: config.rs  error.rs  lib.rs  state_machine.rs  types.rs
crates/rustyclinic-db/: Cargo.toml
crates/rustyclinic-db/src/: lib.rs  migration.rs  migration_pg.rs  sync_repo.rs  tests.rs
crates/rustyclinic-db/src/postgres/: connection.rs  mod.rs  patient_repo.rs  queue_repo.rs  session_repo.rs  sync_repo.rs  user_repo.rs
crates/rustyclinic-db/src/sqlite/: admission_repo.rs  billing_repo.rs  connection.rs  idempotency.rs  lab_repo.rs  mod.rs  order_repo.rs  patient_repo.rs  pharmacy_repo.rs  program_repo.rs  queue_repo.rs  referral_repo.rs  session_repo.rs  sync_repo.rs  unit_of_work.rs  user_repo.rs
crates/rustyclinic-events/: Cargo.toml
crates/rustyclinic-events/src/: lib.rs
crates/rustyclinic-forms/: Cargo.toml
crates/rustyclinic-forms/src/: compiler.rs  dag.rs  definition.rs  engine.rs  evaluator.rs  expression.rs  lib.rs  tests.rs
crates/rustyclinic-identity/: Cargo.toml
crates/rustyclinic-identity/src/: lib.rs
crates/rustyclinic-interop/: Cargo.toml
crates/rustyclinic-interop/src/: lib.rs
crates/rustyclinic-jobs/: Cargo.toml
crates/rustyclinic-jobs/src/: lib.rs
crates/rustyclinic-mcp/: Cargo.toml
crates/rustyclinic-mcp/src/: lib.rs
crates/rustyclinic-packages/: Cargo.toml
crates/rustyclinic-packages/forms/: anc-visit.json  general-encounter.json
crates/rustyclinic-packages/src/: builder.rs  format.rs  lib.rs  reader.rs  signing.rs
crates/rustyclinic-projections/: Cargo.toml
crates/rustyclinic-projections/src/: lib.rs  sqlite.rs
crates/rustyclinic-reporting/: Cargo.toml
crates/rustyclinic-reporting/src/: builtin.rs  csv.rs  definition.rs  dhis2.rs  engine.rs  lib.rs  routes.rs  tests.rs
crates/rustyclinic-services/: Cargo.toml
crates/rustyclinic-services/src/: lib.rs  tests.rs
crates/rustyclinic-services/src/commands/: check_eligibility.rs  complete_encounter.rs  complete_lab_order.rs  create_admission.rs  create_claim.rs  create_encounter.rs  create_lab_order.rs  create_prescription.rs  create_referral.rs  create_user.rs  dispense_prescription.rs  enqueue_patient.rs  enroll_program.rs  grant_waiver.rs  install_package.rs  lock_session.rs  login.rs  mod.rs  record_payment.rs  register_patient.rs  transition_admission.rs  transition_claim.rs  transition_dispense.rs  transition_enrollment.rs  transition_lab.rs  transition_package.rs  transition_queue.rs  transition_referral.rs  unlock_session.rs  update_facility_setting.rs
crates/rustyclinic-sync/: Cargo.toml
crates/rustyclinic-sync/src/: conflict.rs  engine.rs  health.rs  lib.rs  routes.rs  types.rs
crates/rustyclinic-terminology/: Cargo.toml
crates/rustyclinic-terminology/src/: import.rs  lib.rs
crates/rustyclinic-web/: Cargo.toml
crates/rustyclinic-web/src/: assets.rs  form_renderer.rs  forms.rs  lib.rs  templates.rs
crates/rustyclinic-web/src/middleware/: session.rs
crates/rustyclinic-web/src/routes/: auth.rs  encounters.rs  lab.rs  lock.rs  mod.rs  patients.rs  pharmacy.rs  queue.rs  sync.rs
crates/rustyclinic-web/static/: LICENSES.md  sw.js
crates/rustyclinic-web/static/css/: app.css
crates/rustyclinic-web/templates/: base.html  base_app.html  base_auth.html  base_print.html
crates/rustyclinic-web/templates/pages/: lock_screen.html  login.html
crates/rustyclinic-web/templates/pages/encounters/: capture.html  order_lab.html  prescribe.html  triage.html
crates/rustyclinic-web/templates/pages/lab/: queue.html  results.html
crates/rustyclinic-web/templates/pages/patients/: detail.html  patient_card_print.html  register.html  search.html
crates/rustyclinic-web/templates/pages/pharmacy/: dispense.html  dispense_slip_print.html  queue.html
crates/rustyclinic-web/templates/pages/queue/: board.html  queue_ticket_print.html  simple_board.html
crates/rustyclinic-web/templates/pages/sync/: status.html
crates/rustyclinic-web/templates/partials/: empty_state.html  flash.html  patient_list.html  queue_badge.html  queue_entry_row.html  queue_stats.html  sidebar.html  simple_queue_row.html
crates/rustyclinic/src/: main.rs
docs/brand/logo/: GEOMETRY.md  generate.py
docs/designs/: architecture-ceo-review.md  auth-session.md  form-engine.md  sync-protocol.md  terminology-interop.md
