[package]
name = "rustyclinic-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
rustyclinic-core = { path = "../rustyclinic-core" }
rustyclinic-db = { path = "../rustyclinic-db" }
rustyclinic-services = { path = "../rustyclinic-services" }

[lints]
workspace = true
