[package]
name = "rustyclinic-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rustyclinic-core = { path = "../rustyclinic-core" }

[lints]
workspace = true
