[package]
name = "rustyclinic-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
rustyclinic-auth = { path = "../rustyclinic-auth" }
rustyclinic-core = { path = "../rustyclinic-core" }
rustyclinic-events = { path = "../rustyclinic-events" }
rustyclinic-identity = { path = "../rustyclinic-identity" }
rustyclinic-clinical = { path = "../rustyclinic-clinical" }

[lints]
workspace = true
