[package]
name = "rustyclinic-interop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
rustyclinic-terminology = { path = "../rustyclinic-terminology" }

[lints]
workspace = true
