[package]
name = "rustyclinic-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
rustyclinic-core = { path = "../rustyclinic-core" }
rustyclinic-services = { path = "../rustyclinic-services" }

[lints]
workspace = true
