[package]
name = "rustyclinic-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
rusqlite.workspace = true
rustyclinic-auth = { path = "../rustyclinic-auth" }
rustyclinic-db = { path = "../rustyclinic-db" }
rustyclinic-core = { path = "../rustyclinic-core" }
rustyclinic-services = { path = "../rustyclinic-services" }

[lints]
workspace = true
