[package]
name = "rustyclinic-packages"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
zstd.workspace = true
tar.workspace = true
rustyclinic-core = { path = "../rustyclinic-core" }

[lints]
workspace = true
