[package]
name = "rustyclinic-projections"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
rustyclinic-core = { path = "../rustyclinic-core" }
rustyclinic-clinical = { path = "../rustyclinic-clinical" }
rustyclinic-identity = { path = "../rustyclinic-identity" }

[lints]
workspace = true
