[package]
name = "rustyclinic-reporting"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
rustyclinic-core = { path = "../rustyclinic-core" }
rustyclinic-db = { path = "../rustyclinic-db" }

[lints]
workspace = true
