[package]
name = "rustyclinic-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
rustyclinic-core = { path = "../rustyclinic-core" }
rustyclinic-events = { path = "../rustyclinic-events" }
rustyclinic-db = { path = "../rustyclinic-db" }

[lints]
workspace = true
