[package]
name = "rustyclinic-terminology"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
csv.workspace = true
flate2.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tracing.workspace = true
uuid.workspace = true
zip.workspace = true

[lints]
workspace = true
