[package]
name = "rustyclinic-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
askama = "0.12"
askama_axum = "0.4"
axum.workspace = true
axum-extra = { version = "0.10", features = ["cookie"] }
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
rustyclinic-auth = { path = "../rustyclinic-auth" }
rustyclinic-clinical = { path = "../rustyclinic-clinical" }
rustyclinic-core = { path = "../rustyclinic-core" }
rustyclinic-db = { path = "../rustyclinic-db" }
rustyclinic-identity = { path = "../rustyclinic-identity" }
rustyclinic-forms = { path = "../rustyclinic-forms" }
rustyclinic-projections = { path = "../rustyclinic-projections" }
rustyclinic-services = { path = "../rustyclinic-services" }
rustyclinic-terminology = { path = "../rustyclinic-terminology" }

[lints]
workspace = true
